[project]
name = "sourmash_plugin_commonhash"
description = "sourmash plugin to calculate common hashes across multiple sketches."
readme = "README.md"
requires-python = ">=3.8"
version = "0.4"

dependencies = ["sourmash>=4.8.0,<5"]

[metadata]
license = { text = "BSD 3-Clause License" }

[project.entry-points."sourmash.cli_script"]
commonhash = "sourmash_plugin_commonhash:Command_CommonHash"
